[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tythanai-community"
version = "1.7.0"
description = "Open-source security scanner — SAST, SCA, Secrets, IaC, TON/Solana/CosmWasm/Solidity"
readme = "README.md"
license = {text = "BSL-1.1"}
authors = [{name = "TythanAI Team", email = "security@tythanai.io"}]
keywords = ["security", "sast", "sca", "semgrep", "vulnerability", "sarif", "devsecops", "appsec", "web3", "ton", "solana", "solidity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "semgrep>=1.100.0",
    "bandit>=1.7.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]
memory = ["chromadb>=0.4.24"]
# Anthropic SDK — used only if you opt in with TYTHANAI_AI=claude (needs ANTHROPIC_API_KEY).
# The assistant defaults to a fully offline knowledge base; this is never required.
ai = ["anthropic>=0.69.0"]
# MCP runtime — lets Claude Code, Cursor, and VS Code (Continue/Cline) load TythanAI
# as a local tool server. See `community/mcp_server.py` and the README "Agentic IDE
# integration" section.
mcp = ["mcp[cli]>=1.0.0"]
full = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.4.24",
    "anthropic>=0.69.0",
    "mcp[cli]>=1.0.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tythanai = "tythanai_community_cli:main"
tythanai-community = "tythanai_community_cli:main"

[project.urls]
Homepage = "https://tythanai.io"
Documentation = "https://github.com/TythanAI/TythanAIOpen#readme"
Repository = "https://github.com/TythanAI/TythanAIOpen"
"Bug Tracker" = "https://github.com/TythanAI/TythanAIOpen/issues"
Changelog = "https://github.com/TythanAI/TythanAIOpen/releases"

[tool.setuptools]
license-files = []
py-modules = ["tythanai_community_cli"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "landing*"]

[tool.setuptools.package-data]
"*" = ["rules/**/*.yaml", "rules/**/*.yml", "rules/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# The codebase deliberately uses aligned inline `if x: return`, lambda colour
# helpers, graceful bare-except fallbacks, and a sys.path shim in CLI/scripts.
# Keep the meaningful correctness checks (undefined names, unused vars, …) and
# silence the purely stylistic ones that clash with that house style.
ignore = [
    "E501",  # line length
    "F401",  # unused import (re-exports)
    "E701",  # multiple statements on one line (colon) — aligned if/return
    "E702",  # multiple statements on one line (semicolon)
    "E731",  # lambda assignment (RED/GREEN colour helpers)
    "E741",  # ambiguous variable name (l in loops)
    "E722",  # bare except (intentional graceful fallbacks)
    "E402",  # module import not at top (sys.path shim first)
    "E401",  # multiple imports on one line
    "I001",  # import sorting (conflicts with the sys.path shim ordering)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
